headlamp-manifests/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: headlamp-redirect-http-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - headlamp.ranjan.host
    secretName: wildcard-ranjan-host
  rules:
  - host: headlamp.ranjan.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
